--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "chaos-ui",
+  "name": "chaosli-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "dist/chaosli-ui.umd.min.js",
+  "description": "Vue Component styled element.",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "node copy-to-pkgs.js && vue-cli-service build --target lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -23,6 +27,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "fs-extra": "^10.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
