--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "vue",
     "components"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:chaosJS/chaos-ui.git"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
